chore: turn EnrollmentActionRule.field into MetadataIdentifier